--- a/bin/Login.form
+++ b/bin/Login.form
@@ -84,6 +84,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="&#x767b;&#x9646;"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="loginButtonActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="registerButton">
       <Properties>
