--- a/src/Main.form
+++ b/src/Main.form
@@ -326,6 +326,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="&#x641c;&#x7d22;"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="serchButtonActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
